fixed: user can change their password correctly
