# lab1/docs/swagger.json
@@ -381,19 +381,33 @@
         },
         "/api/med-users/profile": {
             "get": {
-                "description": "Возвращает информацию о пользователе по ID (для демонстрации)",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Возвращает информацию о текущем пользователе",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "med_users"
                 ],
-                "summary": "Получение профиля пользователя (старый endpoint)",
+                "summary": "Получение профиля пользователя",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/ds.MedUserResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "404": {
@@ -408,7 +422,12 @@
                 }
             },
             "put": {
-                "description": "Обновляет данные профиля пользователя",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Обновляет пароль текущего пользователя",
                 "consumes": [
                     "application/json"
                 ],
@@ -442,6 +461,15 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
